--- a/charts/polkadot-api/templates/websockets-ingress.yaml
+++ b/charts/polkadot-api/templates/websockets-ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.backends.websockets.enabled }}
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "deployment.fullname" . }}-websockets-proxy
