--- a/charts/polkadot-api/templates/websockets-ingress.yaml
+++ b/charts/polkadot-api/templates/websockets-ingress.yaml
@@ -33,10 +33,8 @@ spec:
           - pathType: Prefix
             path: "/"
             backend:
-              service:
-                name: {{ template "deployment.fullname" . }}-websockets-proxy
-                port:
-                  name: {{ .Values.global.endpoints.networkName }}-websocket-proxy
+              serviceName: {{ template "deployment.fullname" . }}-websockets-proxy
+              servicePort: {{ .Values.global.endpoints.networkName }}-websocket-proxy
     {{- end }}
     {{- if .Values.global.endpoints.aggregate.enabled }}
     - host: "{{ .Values.global.endpoints.aggregate.domain }}"
@@ -45,9 +43,7 @@ spec:
           - pathType: Prefix
             path: "/"
             backend:
-              service:
-                name: {{ template "deployment.fullname" . }}-websockets-proxy
-                port:
-                  name: {{ .Values.global.endpoints.networkName }}-websocket-proxy
+              serviceName: {{ template "deployment.fullname" . }}-websockets-proxy
+              servicePort: {{ .Values.global.endpoints.networkName }}-websocket-proxy
     {{- end }}
 {{- end }}
