--- a/charts/polkadot-api/templates/websockets-ingress.yaml
+++ b/charts/polkadot-api/templates/websockets-ingress.yaml
@@ -33,7 +33,7 @@ spec:
           - path: "/"
             backend:
               serviceName: {{ template "deployment.fullname" . }}-websockets-proxy
-              servicePort: {{ .Values.global.endpoints.networkName }}-websocket-proxy
+              servicePort: {{ .Values.global.endpoints.networkShortName }}-ws
     {{- end }}
     {{- if .Values.global.endpoints.aggregate.enabled }}
     - host: "{{ .Values.global.endpoints.aggregate.domain }}"
@@ -42,6 +42,6 @@ spec:
           - path: "/"
             backend:
               serviceName: {{ template "deployment.fullname" . }}-websockets-proxy
-              servicePort: {{ .Values.global.endpoints.networkName }}-websocket-proxy
+              servicePort: {{ .Values.global.endpoints.networkShortName }}-ws
     {{- end }}
 {{- end }}
